# glossa-lab

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEDGER.md  LICENSE  README.md  SECURITY.md  WARP.md  _fc3.cmd  analyze_fuls_ebooks.py  generate_fuls_report.py  manage.py  ocr_mahadevan.py  process_paste.py  scaffold.yml  setup-os.cmd  setup-os.sh  shell.cmd  shell.sh
backend/: README.md  analyze_cisi.py  capture_study_numbers.py  check_db.py  decode_inscription_texts.py  generate_decipher_report.py  generate_decipherment_report.py  generate_experimental_results_report.py  generate_fuls_nw_semitic_report.py  generate_fuls_report.py  generate_fuls_report_v3.py  generate_paper_full_study.py  generate_project_report.py  generate_protocol_report.py  generate_report_linear_a.py  generate_report_linear_a_circularity.py  generate_report_linear_a_real.py  generate_report_linear_b.py  generate_report_mahadevan_ocr.py  glossa_chat.py  indus_demo.json  indus_demo.txt  pyproject.toml  rebus_test_output.txt  run_assumption_free_experiments.py  run_circularity_experiments.py  run_cpsc_experiments.py  run_decipherment_experiments.py  run_indus_hypothesis.py  run_linear_a_real_study.py  run_m77_corpus_analyses.py  run_preamble_value_assignment.py  run_real_icit_experiments.py  run_sign_expansion.py  run_sign_identification.py  run_tmk_expansion.py  test_notebooks_api.py  test_research_ctx.py  tmp_profile_806.py  ugaritic_demo.json  (+3 more)
backend/.specsmith/: model-rate-limits.json
backend/experiments/: contact_zone_analysis.py  hurrian_language_model.py  icit_research_protocol.py  luwian_language_model.py  sign_mapping_and_tmk.py  tmk_bigram_crossvalidation.py
backend/glossa_lab/: __init__.py  accelerate.py  ag2_agent.py  ai_pacing.py  ai_utils.py  analyze_script.py  cas_model_seeder.py  catalog.py  cli_bridge.py  config.py  corpus_acquirer.py  corpus_catalogue_seeder.py  corpus_seeder.py  corpus_utils.py  cpsc_bridge.py  database.py  engine.py  experiment_base.py  experiment_graph.py  experiment_graph_ctt.py  experiment_graph_indus_evidence.py  experiment_graph_phase101_103.py  experiment_graph_phase104_109.py  experiment_graph_phase110_115.py  experiment_graph_phase116_121.py  experiment_graph_phase122_123.py  experiment_graph_phase124_125.py  experiment_graph_phase126.py  experiment_graph_phase127.py  experiment_graph_phase128_133.py  experiment_graph_phase134_141.py  experiment_graph_phase14.py  experiment_graph_phase142_145.py  experiment_graph_phase146_155.py  experiment_graph_phase15.py  experiment_graph_phase156_165.py  experiment_graph_phase166_168.py  experiment_graph_phase169_170.py  experiment_graph_phase171_178.py  experiment_graph_phase179_180.py  (+60 more)
backend/glossa_lab/api/: __init__.py  ag2_chat.py  ai_endpoints.py  ai_profiles.py  ai_tools.py  analysis.py  anchor_sets.py  cas_models.py  catalog.py  cgsa.py  collab.py  corpus_catalogue.py  correspondences.py  dashboard.py  discovery.py  env.py  experiment_graphs.py  goals.py  (+25 more)
backend/glossa_mcp/: __init__.py  server.py
backend/reports/: INDUS_FINAL_ANCHORS.backup_20260523_181449.json  INDUS_FINAL_ANCHORS.json  INDUS_V10_ROUND3.json  INDUS_V11_ROUND4.json  INDUS_V12_ROUND5.json  INDUS_V13_ROUND6.json  INDUS_V14_ROUND7.json  INDUS_V15_ROUND8.json  INDUS_V16_ROUND9.json  INDUS_V17_ROUND10.json  INDUS_V18_LOOP_EMAIL.txt  INDUS_V18_ROUND11.json  INDUS_V19_ROUND12.json  INDUS_V20_ROUND13.json  INDUS_V21_ROUND14.json  INDUS_V22_ROUND15.json  INDUS_V23_ROUND16.json  INDUS_V24_ROUND17.json  INDUS_V5_PHASES_1_3.json  INDUS_V5_SPECTRAL_GRID.json  INDUS_V6_PMI_ANCHORS.json  INDUS_V6_TASKS_3_6.json  INDUS_V7_FULL_PUSH.json  INDUS_V8_ROUND1.json  INDUS_V9_ROUND2.json  indus_corpus_status_2026-05-14.json  indus_structural_atlas.json  indusscript_in_acquisition.json  papers_assessment.json  phase127_fish_site_results.json  phase132_validation_report.json  phase134_falsification_suite.json  phase144_145_deep_dive.json  phase146_f3_redesign.json  phase148_formula_semantics.json  phase149_adversarial_challenge.json  phase150_polysemy_permutation.json  phase151_site_kl_bootstrap.json  phase155_phonotactic_sibilant.json  phase156_gulf_seal_fish_test.json  (+8 more)
backend/scripts/: _analyse_firestore.py  _audit_pass2.py  _audit_pass3.py  _check_rmrl_quality.py  _check_sources.py  _fix_metadata.py  _inspect_moi.py  _inspect_phase32_extractions.py  _inspect_sources_deep.py  _inspect_tb_corpus.py  _moi_final_supplemental.py  _moi_probe_and_merge.py  _probe_penn.py  _probe_penn2.py  _probe_wikimedia_penn.py  _rmrl_retry_balakrishnan_d8.py  _summarize_phase30a.py  _summarize_phase30c.py  _temp_assess.py  _verify_parpola.py  _verify_parpola_v2.py  acquire_ia_iiif_images.py  acquire_indian_culture_playwright.py  acquire_museums_of_india.py  acquire_museums_of_india_playwright.py  acquire_penn_playwright.py  analyze_cisi.py  analyze_geez_word_positions.py  analyze_indusarrays.py  analyze_koyil.py  analyze_p332_m148.py  attempt_readings.py  audit_data_integrity.py  auto_decipher_loop.py  build_crosswalk.py  build_dravidian_lm.py  build_dravidian_syllable_lm.py  build_mp_crosswalk.py  build_sangam_lm.py  build_sanskrit_syllable_lm.py  (+426 more)
backend/tests/: __init__.py  compare_results.py  conftest.py  test_ai_pacing.py  test_anchor_sets.py  test_atomic_nodes.py  test_catalog.py  test_corpus_catalogue.py  test_corpus_utils.py  test_cpsc.py  test_crack_cipher.py  test_database.py  test_decipher_rtl.py  test_decipher_synthetic.py  test_decipher_ugaritic.py  test_discovery_api.py  test_discovery_cli.py  test_evidence_atomic_nodes.py  test_experiment_graph.py  test_fuls_parser.py  test_governance_lint.py  test_graph_experiments.py  test_health.py  test_hypothesis.py  test_indus_evidence_api.py  test_install_gpu.py  test_jobs.py  test_logging.py  test_logosyllabic.py  test_notifications_api.py  test_nsb.py  test_pipelines.py  test_pipelines_gpu.py  test_projects.py  test_report_templates.py  test_research_loop.py  test_research_loop_deep.py  test_security.py  test_status.py  test_study_linear_a.py  (+7 more)
(+2272 files in other folders)
