[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glossa-lab"
version = "0.1.0"
description = "Backend service for Glossa Lab — agentic research lab for language and script analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "python-json-logger>=3,<4",
    "aiosqlite>=0.20,<1",
    "reportlab>=4,<5",
    "matplotlib>=3.9,<4",
    "numpy>=1.26,<3",
    "psutil>=6,<8",
]

[project.optional-dependencies]
ocr = [
    # Required for ocr_mahadevan.py Pixtral OCR pipeline
    "mistralai>=1,<2",
    # Required for ocr_icit_corpus.py Tesseract OCR pipeline
    "pymupdf>=1.24,<2",
    "pdfplumber>=0.11,<1",
    "pytesseract>=0.3,<1",
]
tray = [
    # Required for the system tray icon (tray/glossa_tray/)
    "pystray>=0.19,<1",
    "Pillow>=10,<12",
]
dev = [
    "pytest>=8,<9",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]
gpu = [
    # CUDA-accelerated batch ops (Tier 3 acceleration).
    # Install ONE of these depending on your CUDA version:
    #   pip install glossa-lab[torch-cuda12]  (recommended for RTX 40xx / A100)
    #   pip install glossa-lab[cupy]
]
torch-cuda12 = [
    "torch>=2.2,<3",
]
torch-cuda11 = [
    "torch>=2.0,<3",
]
cupy = [
    "cupy-cuda12x>=13,<14",
]

[tool.hatch.build.targets.wheel]
packages = ["glossa_lab"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["glossa_lab", "tests"]

[tool.ruff.lint.per-file-ignores]
# Vocabulary dictionaries intentionally group synonyms under shared keys
"glossa_lab/data/*.py" = ["F601"]
# AI API files have intentionally long system prompt strings and data literals
"glossa_lab/api/ai_tools.py" = ["E501"]
"glossa_lab/api/analysis.py" = ["E501"]
"glossa_lab/api/ollama.py" = ["E501"]
"glossa_lab/api/system.py" = ["E501"]
"glossa_lab/api/terminal.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
