[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glossa-lab"
version = "0.1.0"
description = "Backend service for Glossa Lab — agentic research lab for language and script analysis"
requires-python = ">=3.11"
dependencies = [
    "python-multipart>=0.0.9",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "python-json-logger>=3,<4",
    "aiosqlite>=0.20,<1",
    "reportlab>=4,<5",
    "matplotlib>=3.9,<4",
    "numpy>=1.26,<3",
    "psutil>=6,<8",
]

[project.optional-dependencies]
ocr = [
    # Required for ocr_mahadevan.py Pixtral OCR pipeline
    "mistralai>=1,<2",
    # Required for ocr_icit_corpus.py Tesseract OCR pipeline
    "pymupdf>=1.24,<2",
    "pdfplumber>=0.11,<1",
    "pytesseract>=0.3,<1",
]
tray = [
    # Required for the system tray icon (tray/glossa_tray/)
    "pystray>=0.19,<1",
    "Pillow>=10,<13",
]
dev = [
    "pytest>=8,<9",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]

# GPU acceleration — install ONE of these via 'shell.cmd setup'
# (auto-detected; see docs/GPU_SETUP.md and backend/scripts/install_gpu.py)
#
# NVIDIA CUDA 11.x:  pip install glossa-lab[gpu-cuda11]
# NVIDIA CUDA 12.x:  pip install glossa-lab[gpu-cuda12]
# NVIDIA CUDA 13.x:  pip install glossa-lab[gpu-cuda13]   ← recommended for RTX 4070+
# AMD ROCm:          see docs/GPU_SETUP.md  (manual — pip install cupy-rocm-X-X)
# CPU-only:          no extra needed (NumPy is in core deps)
gpu-cuda11 = [
    "cupy-cuda11x>=13,<15",
]
gpu-cuda12 = [
    "cupy-cuda12x>=13,<15",
]
gpu-cuda13 = [
    "cupy-cuda13x>=14,<16",
]

[tool.hatch.build.targets.wheel]
packages = ["glossa_lab"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Style rules with mass violations across intentional data/string files.
# E501  line-too-long: description strings + URL tables are intentionally long
# E701  multiple-statements-colon: compact guard patterns (try: ... except: pass)
# E702  multiple-statements-semicolon: rare compact assignments
# E402  module-level-import-not-at-top: several modules initialise a logger then import
# I001  isort: inline imports with # noqa: PLC0415 confuse isort sorting
extend-ignore = [
    "E501",   # line too long: intentional in data/string files
    "E701",   # multiple-statements-colon: compact guard patterns
    "E702",   # multiple-statements-semicolon: rare compact assignments
    "E402",   # module-level-import-not-at-top: loggers initialised before imports
    "E722",   # bare-except: legitimate catch-all in async handlers
    "E731",   # lambda-assignment: many intentional uses in sort keys
    "E741",   # ambiguous-var-name: I/M/T are standard positional notation
    "I001",   # isort: inline imports with noqa:PLC0415 confuse isort
]

[tool.ruff.lint.isort]
known-first-party = ["glossa_lab", "tests"]

[tool.ruff.lint.per-file-ignores]
# Vocabulary dictionaries intentionally group synonyms under shared keys
"glossa_lab/data/*.py" = ["F601", "F541", "E402"]
# Data corpus files with intentionally long description strings and large literals
"glossa_lab/corpus_catalogue_seeder.py" = ["F841"]
# Model capability profiles: intentionally wide data table (key = model name prefix)
"glossa_lab/model_profiles.py" = ["E501"]
# AI API files have intentionally long system prompt strings and data literals
"glossa_lab/api/ai_tools.py" = ["F401", "F841"]
"glossa_lab/api/ai_profiles.py" = ["F401"]
"glossa_lab/api/analysis.py" = ["E501"]
"glossa_lab/api/ollama.py" = ["E501"]
"glossa_lab/api/system.py" = ["E501"]
"glossa_lab/api/terminal.py" = ["F401"]
"glossa_lab/api/studies.py" = ["F841"]
"glossa_lab/api/reports.py" = ["F841"]
"glossa_lab/api/notifications.py" = ["F401"]
"glossa_lab/api/indus_evidence.py" = ["F401"]
"glossa_lab/api/foundation_check.py" = ["F841"]
"glossa_lab/api/dashboard.py" = ["F401"]
"glossa_lab/corpus_utils.py" = ["F841"]
"glossa_lab/corpus_acquirer.py" = ["F401"]
# Legacy experiment files — pre-existing code, not actively maintained
"glossa_lab/experiments/_legacy/*.py" = ["F821", "F841", "F401", "F601"]
# Research scripts — intermediate variables kept intentionally for readability
"scripts/*.py" = ["F841", "F401", "F821", "F823", "F601"]
# CLI chat tool has long inline strings
"glossa_chat.py" = ["E501"]
# Research/decipherment scripts have long Tamil Unicode literals and reference strings
"run_value_assignment.py" = ["E501"]
"generate_decipherment_report.py" = ["E501"]
"validate_hypotheses.py" = ["E501"]
"run_deep_analysis.py" = ["E501"]
"run_followup_analysis.py" = ["E501"]
"run_sign_identification.py" = ["E501", "W293"]
"verify_fish_signs.py" = ["E501", "W293"]
"run_decipherment_synthesis.py" = ["E501"]
"run_decipherment_deepdive.py" = ["E501", "W293"]
"run_sign_expansion.py" = ["E501", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]

